trunk/Archive2/af/3ff0e468b8937e/output
main.cpp: In function 'int main()':
main.cpp:36:38: error: conversion from 'std::tuple<>' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} _ = awesome_tuple_cat( );
                                      ^
main.cpp:37:44: error: conversion from 'std::tuple<bool, char, short int, int>' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} __ = awesome_tuple_cat( a, b );
                                            ^
main.cpp:38:48: error: conversion from 'std::tuple<bool, char, short int, int, long long int>' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} ___ = awesome_tuple_cat( a, b, c );
                                                ^
